# EcommercePythonChallenge

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  Pipfile  READMEendpoints.md  alembic.ini  database_cleaner.py  ecommerce.db  main.py  pyproject.toml  readme.md  requirements.txt  seed_data.json  seed_from_json.py
alembic/: env.py
alembic/versions/: 1fdcb561a39c_create_initial_schema.py
app/: config.py
app/dependencies/: auth.py
app/domain/: detalle_pedido.py  pedido.py  producto.py  usuario.py
app/domain/entities/: detalle_pedido_entity.py  pedido_entity.py  producto_entity.py  usuario_entity.py
app/mappers/: detalle_pedido_mapper.py  pedido_mapper.py  producto_mapper.py  usuario_mapper.py
app/middleware/: middleware.py
app/models/: detalle_pedido.py  pedido.py  usuario.py
app/models/dto/: PedidoConLinks_dto.py  PedidoListResponseV2.py  register_dto.py  usuarioDTO.py
app/persistence/: db.py
app/routes/: auth_routes.py  detalle_pedido_routes.py  pedido_routes.py  producto_routes.py  usuario_routes.py
app/routes/v1/: pedido_routes_v1.py
app/routes/v2/: pedido_routes_v2.py
app/services/: dependencies.py  detalle_pedido_service.py  pedido_service.py  producto_service.py  usuario_service.py
app/utils/: ProblemDetailsException.py  csv_parser.py  security.py
migrations/: env.py
migrations/versions/: 4228ebb5a609_actualizar_entidad_usuario_para_login_.py  b8ad79f320d6_agregar_campo_estado.py
test/: test_detalle_pedido.py  test_pedidos.py  test_productos.py  test_usuarios.py
